<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/dialog_text_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_content"
        android:gravity="center"
        android:padding="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linghtgray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/dialog_text_nati"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_text_nativ"
            android:gravity="center"
            android:padding="20dp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/linghtgray"/>
        <TextView
            android:id="@+id/dialog_text_posti"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_text_postiv"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>