<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroudcolor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.qingyuan.tianya.mrbuy.activity.MoneyActivity">
    <com.qingyuan.tianya.mrbuy.view.view.HeaderView
        android:id="@+id/ac_money_head"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:middleText="钱包">

    </com.qingyuan.tianya.mrbuy.view.view.HeaderView>
    <LinearLayout
        android:id="@+id/ac_money_lin1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/ac_money_head">
        <RelativeLayout
            android:id="@+id/ac_money_lost_rel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/searchview"
            android:layout_marginLeft="10dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/ac_money_lost_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_lost"
                    android:textColor="@color/lightgray"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ac_money_lost_img"
                    android:textColor="@color/lightgray"
                    android:text="0.00元"
                    android:layout_marginTop="4dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="账户余额"
                    android:textColor="@color/lightgray"
                    android:layout_below="@id/ac_money_lost_img"/>
            </RelativeLayout>
        </RelativeLayout>
        <View
            android:layout_width="0.3dp"
            android:layout_height="match_parent"
            android:background="@color/lightgray"
            android:layout_marginLeft="4dp"/>
        <RelativeLayout
            android:id="@+id/ac_money_backac_rel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/searchview"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/ac_money_backac_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_ac"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:textColor="@color/lightgray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="返现活动"
                    android:textColor="@color/lightgray"
                    android:layout_below="@id/ac_money_backac_img"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_margin="10dp"
        android:layout_below="@id/ac_money_lin1"
        android:background="@color/lightgray"/>
    <LinearLayout
        android:id="@+id/ac_money_lin2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/view1"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/ac_money_back_rel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/searchview"
            android:layout_marginLeft="10dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/ac_money_back_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_back"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:textColor="@color/lightgray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="本月共返"
                    android:textColor="@color/lightgray"
                    android:layout_below="@id/ac_money_back_img"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ac_money_save_rel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/searchview">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/ac_money_save_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_save"
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:textColor="@color/lightgray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="本月共省"
                    android:textColor="@color/lightgray"
                    android:layout_below="@id/ac_money_save_img"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/searchview"
            android:layout_marginRight="10dp">
            <RelativeLayout
                android:id="@+id/ac_money_score_rel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/ac_money_scored_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_scored"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/lightgray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="我的积分"
                    android:textColor="@color/lightgray"
                    android:layout_below="@id/ac_money_scored_img"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ac_money_lin3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/ac_money_lin2"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/ac_money_money_rel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/searchview"
            android:layout_marginLeft="10dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/ac_money_money_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_moneys"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/lightgray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="代金券"
                    android:textColor="@color/lightgray"
                    android:layout_below="@id/ac_money_money_img"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ac_money_discount_rel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/searchview">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/ac_money_discount_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_discount"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/lightgray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="优惠劵"
                    android:textColor="@color/lightgray"
                    android:layout_below="@id/ac_money_discount_img"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ac_money_lottery_rel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/searchview"
            android:layout_marginRight="10dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/ac_money_lottery_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_lottery"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/lightgray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="抽奖码"
                    android:textColor="@color/lightgray"
                    android:layout_below="@id/ac_money_lottery_img"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@id/ac_money_lin3"
        android:layout_margin="10dp"
        android:background="@color/lightgray"
        />
    <LinearLayout
        android:id="@+id/ac_money_lin4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/view2"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/ac_money_charge_rel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/searchview"
            android:layout_marginLeft="10dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/ac_money_charge_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_charge"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/lightgray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="话费流量"
                    android:textColor="@color/lightgray"
                    android:layout_below="@id/ac_money_charge_img"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ac_money_vipcharge_rel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/searchview"
            android:layout_marginLeft="20dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/ac_money_vip_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_vipcharge"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/lightgray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="会员续费"
                    android:textColor="@color/lightgray"
                    android:layout_below="@id/ac_money_vip_img"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/ac_money_recharge_rel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/searchview"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/ac_money_recharge_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons_recharge"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/lightgray"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="生活缴费"
                    android:textColor="@color/lightgray"
                    android:layout_below="@id/ac_money_recharge_img"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
