<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66ffffff">
    <RelativeLayout
        android:id="@+id/fr_left_my_rel1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#66F0F8FF"
        >
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/fr_left_head"
            android:layout_width="50dp"
            android:layout_height="50dp"
            fresco:placeholderImage="@mipmap/default_round_head"
            fresco:roundAsCircle="true"
            fresco:roundingBorderColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:layout_toRightOf="@id/fr_left_head">
            <TextView
                android:id="@+id/fr_left_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="我的名字"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="vip0" />
        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6687CEFA"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/fr_left_money_rel"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/fr_left_money_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/icons_money"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/fr_left_money_img"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="我的钱包"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/linghtgray"/>
        <RelativeLayout
            android:id="@+id/fr_left_vip_rel"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/fr_left_vip_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/icons_vip"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/fr_left_vip_img"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="我的会员"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/linghtgray"/>
        <RelativeLayout
            android:id="@+id/fr_left_collect_rel"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/fr_left_collect_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/icons_collect"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/fr_left_collect_img"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="我的收藏"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/linghtgray"/>
        <RelativeLayout
            android:id="@+id/fr_left_message_rel"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/fr_left_message_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/icons_message"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/fr_left_message_img"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="消息中心"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/linghtgray"/>
        <RelativeLayout
            android:id="@+id/fr_left_feedback_rel"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/fr_left_feedback_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/icons_feedback"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/fr_left_feedback_img"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="用户反馈"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/linghtgray"/>
        <RelativeLayout
            android:id="@+id/fr_left_setting_rel"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:id="@+id/fr_left_setting_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/icons_setting"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/fr_left_setting_img"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="设置"
                android:layout_marginLeft="10dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/linghtgray"

            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/fr_left_merchant_rel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/fr_left_merchant_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icons_merchant"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/fr_left_merchant_img"
                android:text="我是商家"
                android:textSize="18sp"
                />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>